--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.com.example.board=debug
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 # MariaDB
 spring.datasource.url=jdbc:mariadb://192.168.0.230:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
