--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ logging.level.com.example.board=debug
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
+server.port=9090
+
 # MariaDB
 spring.datasource.url=jdbc:mariadb://192.168.0.230:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
