--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
+# file upload
+spring.servlet.multipart.max-file-size=2097152
+spring.servlet.multipart.max-request-size=2097152
+
 # server.port=80
 # server.servlet.session.timeout=30m
 # server.servlet.session.tracking-modes=cookie
